# Bond-Switch-Simulator

./: .clang-format  .gitignore  3d_visualise_network.py  CMakeLists.txt  README.md  chech_marsh.py  establish_restart_marsh.py  installation_instructions.txt  lammps_to_netmc_marsh.py  netmc.inpt  plot_e_compare.py  plot_energy.py  plot_ring_stats.py  toolchain.cmake  visualise_network.py
docs/: building_and_running.md  installing_dependencies.md  setting_up_a_potential.md  setting_up_the_input_file.md
include/: concepts.h  file_tools.h  input_data.h  input_data.tpp  lammps_c_interface.h  lammps_manager.h  lammps_object.h  linked_network.h  metropolis.h  monte_carlo.h  network.h  node.h  opt.h  opt.tpp  output_file.h  output_file.tpp  pot.h  pot1d.h  pot2d.h  pot3d.h  random_number_generator.h  stats.h  switch_move.h  types.h  utils.h  vec_func.h  vecf.h  vecf.tpp  vecr.h  vecr.tpp  vector_tools.h  vector_tools.tpp
pot_files/: pot2d.cpp  pot3d.h
python_scripts/: analyse_data.py
python_scripts/utils/: __init__.py  netmc_output_data.py
run/input_files/: bss_parameters.txt
run/input_files/lammps_files/: lammps_potential.txt  lammps_script.txt
src/: CMakeLists.txt  file_tools.cpp  input_data.cpp  lammps_c_interface.cpp  lammps_manager.cpp  lammps_object.cpp  linked_network.cpp  main.cpp  metropolis.cpp  monte_carlo.cpp  monte_carlo.h  network.cpp  node.cpp  node.h  opt.tpp  output_file.cpp  pot.cpp  pot2d.cpp  pot2d.h  pot3d.cpp  random_number_generator.cpp  switch_move.cpp  vec_func.h  vecr.tpp  vector_tools.cpp
testing/: Si_potential.in  Si_script.in  netmc.inpt
testing/input_files/: C_potential.in  PARM_Si2O3.lammps  Si.data  Si.in  Si2O3.data  Si_potential.in
testing/input_files_pore/: Si.data  Si.in  Si_potential.in
tests/: CMakeLists.txt  test_vector_tools.cpp
